tests/output/self_hosted/double_minus_front_error.txt
tests/double_minus_front_error.oomph:4: error: sorry, --x is not supported :(

    print(--thing)     # This errors
          ^^

